Netflix mini project

--- a/style.css
+++ b/style.css
@@ -1,66 +1,126 @@
-.gridtable{
+*{
     margin: 0;
     padding: 0;
-    height: 100vh;
-    display: grid;
-    grid-gap: 10px;
-    grid-template-columns: repeat(12, 1fr);
-    grid-template-rows: repeat(12, 1fr);
-}
-.box{
-    background-color: #f4b4b4;
-    border: 1px solid black;
-    font-size: 1.5rem;
-    min-width: 200px;
-}
-#head{
-    grid-column: 1 /span 12;
-}
-#sidebar{
-    grid-column: 1 /span 3;
-    grid-row: 2 /span 10;
-}
-#nav{
-    grid-column: 4 /span 6;
-}
-#ads{
-    grid-row: 2 /span 10;
-    grid-column: 10 /span 3;
-}
-#main{
-    grid-column: 4 /span 6;
-    grid-row: 3 /span 9;
-}
-#foot{
-    grid-column: 1 /span 12;
-}
-.box:hover{
-    box-shadow: 2px 2px 10px black;
-    transition: 0.5s;
-}
-@media(max-width: 845px){
-    #head{
-        grid-column: 1 /span 12;
-    }
-    #nav{
-        grid-row: 2;
-        grid-column: 1 /span 12;
-    }
-    #sidebar{
-        grid-column: 1 /span 4;
-        grid-row: 3 / span 9;
-    }
-    #main{
-        grid-column: 5 /span 9;
-        grid-row: 3 /span 9;
-    }
-    #ads{
-        grid-column: 1 /span 4;
-        grid-row: 12;
-    }
-    #foot{
-        grid-column: 5 /span 9;
-        grid-row: 12;
-    }
+    font-family: "Poppins", sans-serif;
 }
 
+.main_box{
+    background: url(login.jpg);
+    height: 100vh;
+    background-size: cover;
+    
+}
+
+.btn_one i{
+    color: white;
+    font-size: 30px;
+    font-weight: 700;
+    position: absolute;
+    left: 16px;
+    line-height: 60px;
+    cursor: pointer;
+    transition: 0.3s linear;
+}
+
+.sidebar{
+    position: fixed;
+    left: -320px;
+    height: 100vh;
+    width: 300px;
+    background-color: rgba(255, 255, 255, 0.3);
+    box-shadow: 2px 0px 8px white;
+    transition: 0.3s linear;
+}
+
+.sidebar .logo{
+    position: absolute;
+    width: 100%;
+    line-height: 60px;
+    box-shadow: 2px 0px 4px white;
+    height: 60px;
+}
+
+.sidebar .logo a{
+    position: absolute;
+    left: 60px;
+    color: rgb(229,9,20);
+    text-decoration: none;
+    font-size: 30px;
+    font-weight: 700;
+}
+
+.sidebar .btn_two i{
+    color: grey;
+    opacity: 0.7;
+    font-size: 30px;
+    font-weight: 700;
+    position: absolute;
+    left: 260px;
+    line-height: 60px;
+    cursor: pointer;
+}
+
+.sidebar .menu{
+    height: 100vh;
+    width: 100%;
+    position: absolute;
+    top: 60px;
+}
+
+.sidebar .menu li{
+    margin: 0px;
+    padding: 14px 30px;
+    
+}
+
+.sidebar .menu i,a{
+    color: white;
+    font-size: 30px;
+    text-decoration: none;
+}
+
+.sidebar .menu i{
+    padding-right: 12px;
+}
+
+.sidebar .social{
+    position: absolute;
+    left: 25%;
+    bottom: 40px;
+}
+
+.sidebar .social i{
+    color: white;
+    opacity: 0.5;
+}
+
+#check{
+    display: none;
+}
+
+.sidebar .menu li:hover{
+    box-shadow: 0px 0px 4px white;
+    transition: 0.3s;
+}
+
+.btn_one i:hover{
+    transform: scale(1.2);
+}
+
+.btn_two i:hover{
+    transform: scale(1.2);
+    transition: 0.2s;
+}
+
+.sidebar .social i:hover{
+    opacity: 1;
+    transform: scale(1.1);
+}
+
+#check:checked ~ .sidebar{
+    left: 0;
+}
+
+#check:checked ~ .btn_one i{
+    display: none;
+}
