--- a/Spotify_Project/stylee.css
+++ b/Spotify_Project/stylee.css
@@ -294,6 +294,7 @@ a{
     appearance: none;
     cursor: pointer;
     background-color: transparent;
+    padding: 10px;
 }
 .progress::-webkit-slider-runnable-track{
     background-color: #ddd;
@@ -308,4 +309,62 @@ a{
     border-radius: 50%;
     margin-top: -6px;
     z-index: 10;
+    
+}
+.control{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding-right: 4px;
+}
+.control i{
+    height: 1rem;
+    width: 1rem;
+    padding: 0.25rem;
+    margin: 0;
+    opacity: 0.8;
+}
+.control input{
+    margin: 0;
+    padding: 10px 0 10px 0;
+}
+.sound{
+    width: 20%;
+}
+.control i:hover{
+    opacity: 1;
+}
+.album{
+    display: flex;
+    justify-content: start;
+    align-items: start;
+    flex-wrap: wrap;
+}
+.album img{
+    height: 90%;
+    margin: 0.2rem;
+    border-radius: 10px;
+    cursor: pointer;
+}
+.album img:hover{
+    box-shadow: 0px 0px 8px #1bd760;
+}
+.album h3{
+    width: 50%;
+    padding: 10px 10px 0 10px;
+}
+.album p{
+    position: absolute;
+    bottom: 20px;
+    left: 80px;
+    font-weight: 300;
+    opacity: 0.8;
+    font-size: small;
+}
+.album i{
+    color: #1bd760;
+    position: absolute;
+    bottom: 20px;
+    left: 205px;
+    padding: 10px;
 }
