--- a/javaSript/style.css
+++ b/javaSript/style.css
@@ -1,43 +1,10 @@
-/* body {
+body{
+    text-align: center;
+}
 
-    font-family: Arial;
-}
-#mainimg{
-    width: 35%;
-}
-.box{
-    border: 0.25px solid black;
-    background-color: lightgray;
-    width: 200px;
-    padding: 1rem;
-}
-.boxlink{
-    text-decoration: none;
-}
-#description{
-    background-color: antiquewhite;
-}
-.oldImg{
-    height: 200px;
-    width: 200px;
-    margin-right: 1rem;
-} */
-
-.red{
-    color: red;
-}
-.green{
-    color: green;
-}
-.boder{
-    border: 2px solid black;
-    background-color:  pink;
-}
-.text{
-    background-color: blue;
-    color: white;
-}
-.under{
-    text-decoration: underline;
-    color: purple;
+div{
+    height: 100px;
+    width: 500px;
+    border: 1px solid black;
+    margin: auto;
 }
