--- a/javaSript/style.css
+++ b/javaSript/style.css
@@ -11,7 +11,7 @@ body{
     height: 200px;
     width: 200px;
     border: 10px solid black;
-    border-radius: 10px;
+    border-radius: 30px;
     margin: 1rem;
 }
 
@@ -29,4 +29,11 @@ body{
 
 .pur{
     background-color: #819ff9;
+}
+
+.flash{
+    background-color: white;
+}
+.userflash{
+    background-color: green;
 }
