added (newuser, deleteuser)
it is far from perfect and still so many failing issue but ill improve over time.

--- a/node_with_sql/views/home.ejs
+++ b/node_with_sql/views/home.ejs
@@ -7,6 +7,9 @@
 </head>
 <body>
     <h2>total nomber of our user are: <%= count %></h2>
-    <button>Join us</button>
+    <form method="post" action="/new">
+        <button>Join us</button>
+    </form>
+    
 </body>
 </html>
